--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "main": "server.js",
   "scripts": {
     "start:vite": "vite --port 3000",
-    "start": "node -r dotenv/config server.js",
+    "start": "nodemon -r dotenv/config server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@vitejs/plugin-react": "^3.1.0",
+    "axios": "^1.5.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "request": "^2.88.2"
