--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start:vite": "vite --port 3000",
-    "start": "nodemon -r dotenv/config server.js",
+    "build": "vite build",
+    "start": "rm -rf ./dist && npm run build && node -r dotenv/config server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -21,6 +22,7 @@
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
